Fix nav header transparency on mobile

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -95,6 +95,10 @@
       }
     }
   }
+
+  .navbar .nav-item.dropdown:not(.show) a {
+    background-color: transparent !important;
+  }
 }
 
 .navbar-collapse {
